<resources>
    <string name="app_name">AppChi</string>
    <string name="edit">Edit</string>
    <string name="channel_description">send daily jokes</string>
    <string name="channel_name">Jokes</string>
    <string name="noteficition_time">Alert Time</string>
    <string name="save">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="alerts">Alerts</string>
    <string name="description">Description</string>
    <string name="insert_Description">Insert a description</string>
    <string name="add">Add task</string>
    <string name="delete">Detlete Task</string>
    <string name="new_task">New task</string>
    <string name="delete_all">Delete all tasks</string>
    <string name="tasks_activity">Your Tasks</string>
    <string name="Productivity">Productivity</string>
    <string name="Tools">Tools</string>
    <string name="fun">Fun</string>
    <string name="Metronome">Metronome</string>
    <string name="JoeksActivty">Jokes Generator</string>
    <string name="random">Random</string>
    <string name="to">To</string>
    <string name="done">Done</string>
    <string-array name="dice">
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>20</item>
    </string-array>
    <string-array name="langs">
        <item>choose language</item>
        <item>English</item>
        <item>Hebrew</item>
    </string-array>
    <string-array name="home_layouts">
        <item>Divided (default)</item>
        <item>United</item>
    </string-array>
    <string name="chose">Chose</string>
    <string name="roll">Roll</string>
    <string name="insert_num">Insert number</string>
    <string name="random_joke">Random joke</string>
    <string name="all_jokes">All jokes</string>
    <string name="new_joke">New joke</string>
    <string name="compose_shortcut_short_label1">Random</string>
    <string name="compose_shortcut_long_label1">random long</string>
    <string name="compose_disabled_message1">nope</string>
    <string name="roll_dice">Roll a dice</string>
    <string name="generate_random_number">Generate a random number</string>
    <string name="generate_password">Generate password</string>
    <string name="letters">letters</string>
    <string name="uppercase">uppercase lettres</string>
    <string name="special">special chars</string>
    <string name="numbrees">numbers</string>
    <string name="password_generated">Password generated</string>
    <string name="coppy">Copy</string>
    <string name="password_legth">Password length</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="erel">Erel</string>
    <string name="more_apps">More apps</string>
    <string name="yoller">Yoller</string>
    <string name="Tzuberman">Tzuberman</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="new_pass">Enter new password</string>
    <string name="old_pass">Enter old password</string>
    <string name="pass_error">The password you entered does not match the old password. The operation was cancelled.</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="signup">Sign-Up</string>
    <string name="already_logged">Already have an account? Login</string>
    <string name="need_sign">Do not have an account? Sign-Up</string>
    <string name="delete_user">Delete user</string>
    <string name="del_question">Are you sure you want to delete your user?</string>
    <string name="field_empty">This field cannot be empty</string>
    <string name="already_email">Account with this E-mail already exists!</string>
    <string name="sus_user_del">User deleted successfully</string>
    <string name="login_google">Sign-in with Google</string>
    <string name="bmi_activity">BMI calculator</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="Height_m">Height (m)</string>
    <string name="calculate">Calculate</string>
    <string name="bmi1">Severely underweight</string>
    <string name="bmi2">Underweight</string>
    <string name="bmi3">Normal</string>
    <string name="bmi4">Overweight</string>
    <string name="bmi5">Obese</string>
    <string name="clinet_id" translatable="false">621517871046-jrnesbr6o3gsj9emuli0sek5b6ag0d0h.apps.googleusercontent.com</string>
    <string name="enter_tt">Enter Task Title</string>
    <string name="set_reminder">Set reminder date and time</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_cat">Add Category</string>
    <string name="remove_cat">Select categories to remove</string>
    <string name="languages_activity">Languages Quiz</string>
    <string name="send">Send</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="enter_lang1">Enter words in language you want to practice on</string>
    <string name="enter_lang2">Enter words in language you know</string>
    <string name="score">Score</string>
    <string name="correct_answer">Correct Answer!</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="question">Question</string>
    <string name="more7">Please provide more then 4 lines</string>
    <string name="options_quiz">Options quiz</string>
    <string name="true_or_false">True or false</string>
    <string name="_true">True</string>
    <string name="_false">False</string>
    <string name="type">Typing</string>
    <string name="write_another_lang">Write the word in the second language</string>
    <string name="equal_lang">Please enter same amonut of lines of every lang</string>
    <string name="hearing">Hearing</string>
    <string name="lang_explain">Here you can practice vocabulary. To get started, you must insert a matching phrase in its translation below in both places, a phrase per line. (For example, the third lines will be the same in their translation). Please enter at least 5 lines. Select the exam types below and click the button to begin.</string>
    <string name="check_updates">Check for updates</string>
    <string name="download_updates">New update available, please wait...</string>
    <string name="new_up_av">New update available, click to install</string>
    <string name="new_up_av_title">New update available</string>
    <string name="no_updates">No updates available. You are on the most updated version.</string>
    <string name="install">Install</string>
    <string name="update_lm">Having troubles?</string>
    <string name="update_help">In case you encounter the error \"The application was not installed\", download the file (Downloads folder), remove the application and install from the file you downloaded.</string>
    <string name="open_br">Download file</string>
    <string name="uninstall">Uninstall</string>
    <string name="error_update">An error occurred in the process. Please verify your internet connection and try again.</string>
    <string name="installed_ver">Installed version</string>
    <string name="app_lang">Application language</string>
    <string name="choose_language">choose language</string>
    <string name="not_logged">Not logged</string>
    <string name="auto_update">Auto updates</string>
    <string name="send_fb">Send feedback</string>
    <string name="ht_activity">Hallel Triangel</string>
    <string name="enter_code">Enter Code</string>
    <string name="player_a">Player A</string>
    <string name="player_b">Player B</string>
    <string name="player_a_wins">Player A won!</string>
    <string name="player_b_wins">Player B won!</string>
    <string name="save_words">Save words</string>
    <string name="load_words">Load Words</string>
    <string name="enter_words_title">Enter Title</string>
    <string name="remove_words">Remove list</string>
    <string name="no_words">No wrods saved. click the Save words button to start.</string>
    <string name="your_joke">Your joke</string>
    <string name="jokes_main">Joke</string>
    <string name="current_time">Current time:</string>
    <string name="not_selected">not selected</string>
    <string name="schedule_notifications">Schedule notifications</string>
    <string name="set_not_time">Set notificatiion time</string>
    <string name="update_installing_now">Downloading the file, please wait and do not touch the screen.</string>
    <string name="update_downloaded">The file has been downloaded successfully.</string>
    <string name="apk_dwonloaded">The file has downloaded successfully.</string>
    <string name="downloading_update...">Downloading update...</string>
    <string name="fart1">Squish-squish</string>
    <string name="fart2">Strong-long</string>
    <string name="fart3">Quick splat</string>
    <string name="fart4">Fast splat</string>
    <string name="fart5">Cartoon</string>
    <string name="fart6">Tam-tam-tam</string>
    <string name="fart7">Wet fart</string>
    <string name="fart8">Happy birthday</string>
    <string name="fart9">Vegan fart</string>
    <string name="fart10">Reverb fart</string>
    <string name="fart11">Family Pack</string>
    <string name="fart12">Refresh</string>
    <string name="flashlight">Flashlight</string>
    <string name="flash_warn">The difference you entered is very low and may cause the application to crash, do you want to continue?</string>
    <string name="warning">Warning!</string>
    <string name="no">No</string>
    <string name="flash_info">Please enter a difference (in milliseconds) and press the button to turn on the flashlight at that difference.</string>
    <string name="fart_activity">Farts maker</string>
    <string name="add_shortcut">Add shortcut</string>
    <string name="microphone">Microphone</string>
    <string name="you_answered">You answered</string>
    <string name="questions">questions successfully</string>
    <string name="failed_words">Words you got wrong:</string>
    <string name="mis_am">Amount of mistakes:</string>
    <string name="perfectly_knew">Words you knew perfectly:</string>
    <string name="avg_ans">Average answer response time:</string>
    <string name="secs">s\'</string>
    <string name="next">Next</string>
    <string name="share">Share</string>
    <string name="share_lang_score1">Look! i got</string>
    <string name="share_lang_score2">grade on my test with AppChi app!</string>
    <string name="try_again">Try again</string>
    <string name="your_saved_words">Your saved words:</string>
    <string name="no_saved_words">You haven\'t saved any words yet</string>
    <string name="new_words">New words</string>
    <string name="no_quiz_types_error">Please select an examination method(s).</string>
    <string name="learn_cb">I want to learn before</string>
    <string name="textguied1">Enter words to practice:</string>
    <string name="textguied2">Select examination methods:</string>
    <string name="d_whatsapp">Direct WhatsApp message</string>
    <string name="enter_num">Enter a phone number</string>
    <string name="eg_phone">E.g: +1 123 456 7890</string>
    <string name="copy_list">Share list</string>
    <string name="add_words">Add words</string>
    <string name="open_words_file">Open list from file</string>
    <string name="ads_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="step">Step</string>
</resources>