<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/enter_start_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:hint="@string/start"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/enter_end_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_weight="1"
        android:hint="@string/end"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/enter_step_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_weight="1"
        android:hint="@string/step"
        android:inputType="numberSigned" />
</LinearLayout>