<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/words_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Fruits"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textguied1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:text="@string/textguied1"
            android:textColor="@color/sub_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/allWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textguied2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:paddingHorizontal="4dp"
                            android:text="@string/enter_lang2"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textguied"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:paddingHorizontal="4dp"
                            android:text="@string/enter_lang1"
                            android:textColor="@color/black" />

                        <ImageButton
                            android:id="@+id/addEditTextsBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:adjustViewBounds="true"
                            android:backgroundTint="#00FFFFFF"
                            android:contentDescription="@string/add_words"
                            android:minHeight="48dp"
                            app:srcCompat="@drawable/ic_baseline_add_circle_24"
                            app:tint="@color/main_color" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/c_learn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/learn_cb" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="4dp"
                android:text="@string/textguied2"
                android:textColor="@color/sub_color" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/c_tf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/true_or_false" />

                <CheckBox
                    android:id="@+id/c_options"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/options_quiz" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/c_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type" />

                <CheckBox
                    android:id="@+id/cHear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hearing" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_quiz"
                    android:textColor="#424242"
                    app:icon="@drawable/ic_baseline_quiz_24"
                    app:iconGravity="end"
                    app:iconTint="@color/sub_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/delete_list"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/remove_words"
                        android:textColor="#424242"
                        app:icon="@drawable/ic_baseline_delete_24"
                        app:iconGravity="end"
                        app:iconTint="@color/bad" />

                    <Button
                        android:id="@+id/copy_btn"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/copy_list"
                        android:textColor="#424242"
                        app:icon="@drawable/ic_baseline_share_24"
                        app:iconGravity="end"
                        app:iconTint="@color/sub_color" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
